Just playing aroun with a flexbox version of the editor UI, this is doable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,31 @@
-<h1>
-  {{title}}
-</h1>
+<div class="titlebar">
+  <h2>MapWork Flexbox Layout Concept</h2>
+</div>
+<div class="parent">
+  <div class="item sideitem">
+    <div class="square">
+
+    </div>
+    <div class="square">
+
+    </div>
+    <div class="square">
+
+    </div>
+  </div>
+  <div class="item centreitem">
+    <canvas id="mycanvas"></canvas>
+  </div>
+  <div class="item sideitem">
+    <div class="square">
+
+    </div>
+    <div class="square">
+
+    </div>
+    <div class="square">
+
+    </div>
+  </div>
+
+</div>
